# penti-trainer-py

./: LICENSE  README.MD  chords.txt  penti_app.py  penti_cli.py  penti_trainer.py  penti_trainer_py.py  pyproject.toml  trainer.py
app/: penti.pyxapp
