[project]
name = "penti-trainer-py"
version = "0.1.0"
description = "The simple trainer for PENTI chording keyboard layout."
authors = [
    { name = "Dimentium", email = "dk@lemd.cc" }
]
keywords = ["penti", "chording"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/dimentium/penti-trainer-py"
Repository = "https://github.com/dimentium/penti-trainer-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
